--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
     "configurations": [
       {
         "type": "java",
+        "name": "ShoppingApp",
+        "request": "launch",
+        "mainClass": "org.example.ShoppingApp",
+        "projectName": "Template-Java-Projects-with-Maven"
+      },
+      {
+        "type": "java",
         "name": "Debug (Launch)",
         "request": "launch",
         "mainClass": "org.example.Main",
